--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,15 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            虹烁独立区
+longtitle:        虹烁独立区-设定集
+author:           TwoLoong
 description: >
-  Build Jekyll site with the GitBook style.
+  一个非常简陋的虹烁独立区的展示网页
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
-rss:              RSS
+url:              'https://github.com/IridesceIFC'
+baseurl:          '/iridesceifc.github.io'
 
 # bootstrap: use the remote theme for the site itself
 remote_theme: sighingnow/jekyll-gitbook
