--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,8 @@ collections:
     permalink: /:collection/:path/
 
 ordered_collections:
-  - posts
-  - pages
+  - iridesce
+  - cities
   - others
 
 page_width: 800px
